Fix integration to support auth

--- a/src/integrationTest/resources/application.properties
+++ b/src/integrationTest/resources/application.properties
@@ -1,5 +1,4 @@
-#
-#spring.sql.init.data-locations=classpath:test-user-data.sql
-#spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+app.auth.token.secret=secret
+app.auth.token.expiration.minutes=60
