Add Redme.md file, refactor code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=user-management-system
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/usermanagement
-spring.datasource.username=postgres
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.username=shankarghimire
+spring.datasource.password=1997
+spring.jpa.hibernate.ddl-auto=update
+app.auth.token.secret=secret
+app.auth.token.expiration.minutes=60
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
